[fix] image width causing overflows

--- a/questify_client/src/styles/ProseMirror.css
+++ b/questify_client/src/styles/ProseMirror.css
@@ -22,3 +22,7 @@
   justify-content: center;
   align-items: center;
 }
+
+.ProseMirror img {
+  width: 100%;
+}
